Fixes overflow of displayed person list in popup and finishes sort type and direction functionality.

--- a/src/components/PersonSelectorPopup.css
+++ b/src/components/PersonSelectorPopup.css
@@ -100,5 +100,15 @@
 
 .displayed-people-container {
     flex: 1;
+    position: relative;
+    overflow-y: auto;
     background-color: green; /* TEMP FOR POSITIONING */
+}
+
+.displayed-people-list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
